--- a/Resources/Prototypes/Entities/Structures/Doors/FalseWalls/false_walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/FalseWalls/false_walls.yml
@@ -49,10 +49,15 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 200
+        damage: 50
       behaviors:
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          DisplacedGirder:
+            min: 1
+            max: 1
       - !type:DoActsBehavior
-        acts: ["Destruction"]
+        acts: [ "Destruction" ]
   - type: IconSmooth
     key: walls
     mode: NoSprite
@@ -64,10 +69,45 @@
   - type: BlockWeather
 
 - type: entity
+  id: DisplacedGirder
+  parent: Girder
+  name: displaced girder
+  description: Girder with altered structur; By adding steel sheets to it, you can easily move them to the side.
+  components:
+  - type: Construction
+    graph: DisplacedGirderStart
+    node: displacedGirder
+  - type: Sprite
+    sprite: Structures/Doors/false_walls/displaced_girder.rsi
+    state: displaced
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 100
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+    - trigger:
+        !type:DamageTrigger
+        damage: 25
+      behaviors:
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          SheetSteel1:
+            min: 1
+            max: 1
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+
+- type: entity
   id: SolidFalseWall
   name: solid wall
   parent: BaseFalseWall
   components:
   - type: Construction
-    graph: Girder
+    graph: DisplacedGirder
     node: solidFalseWall
