changed on map sashimi to enchiladas

--- a/Resources/Maps/Shuttles/ShuttleEvent/traveling_china_cuisine.yml
+++ b/Resources/Maps/Shuttles/ShuttleEvent/traveling_china_cuisine.yml
@@ -700,7 +700,7 @@ entities:
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
-- proto: FoodMealSashimi
+- proto: FoodMealEnchiladas
   entities:
   - uid: 93
     components:
