--- a/Resources/Prototypes/Entities/Clothing/Neck/cloaks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/cloaks.yml
@@ -153,13 +153,14 @@
   - type: Sprite
     sprite: Clothing/Neck/Cloaks/goliathcloak.rsi
   - type: ToggleableClothing
-    clothingPrototype: ClothingHeadHatHoodGoliathCloak
+    clothingPrototypes: 
+      head: ClothingHeadHatHoodGoliathCloak
     requiredSlot:
     - neck
     slot: head
   - type: ContainerContainer
     containers:
-      toggleable-clothing: !type:ContainerSlot {}
+      toggleable-clothing: !type:Container {}
 
 - type: entity
   parent: ClothingNeckBase
@@ -179,13 +180,14 @@
   - type: Sprite
     sprite: Clothing/Neck/Cloaks/moth.rsi
   - type: ToggleableClothing
-    clothingPrototype: ClothingHeadHatHoodMoth
+    clothingPrototypes: 
+      head: ClothingHeadHatHoodMoth
     requiredSlot:
     - neck
     slot: head
   - type: ContainerContainer
     containers:
-      toggleable-clothing: !type:ContainerSlot {}
+      toggleable-clothing: !type:Container {}
   - type: TypingIndicatorClothing
     proto: moth
 
