some contra fixes

--- a/Resources/Prototypes/Entities/Objects/Fun/whistles.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/whistles.yml
@@ -30,7 +30,7 @@
     state: whistle
 
 - type: entity
-  parent: BaseWhistle
+  parent: [BaseWhistle, BaseRestrictedContraband]
   id: SecurityWhistle
   description: Sound of it make you feel fear.
   components:
