--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -54,6 +54,27 @@
 
 - type: entity
   parent: SeedBase
+  name: packet of sunflower seeds
+  id: SunflowerSeeds
+  components:
+    - type: Seed
+      seedId: sunflower
+    - type: Sprite
+      sprite: Objects/Specific/Hydroponics/sunflower.rsi
+
+- type: entity
+  parent: SeedBase
+  name: packet of sentiflower seeds
+  id: SentiflowerSeeds
+  components:
+    - type: Seed
+      seedId: sentiflower
+    - type: Sprite
+      sprite: Objects/Specific/Hydroponics/sentiflower.rsi
+
+
+- type: entity
+  parent: SeedBase
   name: packet of carrot seeds
   id: CarrotSeeds
   components:
