Custom eject verb for the mop bucket

--- a/Resources/Prototypes/Entities/Structures/Specific/Janitor/janicart.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Janitor/janicart.yml
@@ -58,6 +58,7 @@
     slots:
       item_slot:
         name: mop-bucket-slot-component-slot-name-item
+        ejectVerbText: mop-bucket-slot-component-eject-verb
         whitelist:
           tags:
             - PlushieSharkBlue
