uhhh a lot of window stuff, mainly easy upgrades

--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/windowdirectional.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/windowdirectional.yml
@@ -4,47 +4,47 @@
   graph:
     - node: start
       edges:
-
-        - to: windowDirectional
+        - to: windowDirectional # 25 hp
           steps:
             - material: Glass
               amount: 1
-              doAfter: 2
+              doAfter: 1
 
-        - to: windowReinforcedDirectional
-          steps:
-            - material: ReinforcedGlass
-              amount: 1
-              doAfter: 3
-
-        - to: plasmaWindowDirectional
+        - to: plasmaWindowDirectional # 37 hp
           steps:
             - material: PlasmaGlass
               amount: 1
-              doAfter: 2
+              doAfter: 1.5
 
-        - to: plasmaReinforcedWindowDirectional
-          steps:
-            - material: ReinforcedPlasmaGlass
-              amount: 1
-              doAfter: 3
-        - to: uraniumWindowDirectional
+        - to: uraniumWindowDirectional # 37 hp
           steps:
             - material: UraniumGlass
               amount: 1
-              doAfter: 2
+              doAfter: 1.5
 
-        - to: uraniumReinforcedWindowDirectional
-          steps:
-            - material: ReinforcedUraniumGlass
-              amount: 1
-              doAfter: 3
-
-        - to: windowClockworkDirectional
+        - to: windowClockworkDirectional # 37 hp reinforced damage mod
           steps:
             - material: ClockworkGlass
               amount: 1
-              doAfter: 3
+              doAfter: 1.5
+
+        - to: windowReinforcedDirectional # 37 hp reinforced damage mod
+          steps:
+            - material: ReinforcedGlass
+              amount: 1
+              doAfter: 1.5
+
+        - to: plasmaReinforcedWindowDirectional # 50 hp reinforced damage mod
+          steps:
+            - material: ReinforcedPlasmaGlass
+              amount: 1
+              doAfter: 2
+
+        - to: uraniumReinforcedWindowDirectional # 50 hp reinforced damage mod
+          steps:
+            - material: ReinforcedUraniumGlass
+              amount: 1
+              doAfter: 2
 
     - node: windowDirectional
       entity: WindowDirectional
@@ -60,25 +60,26 @@
               doAfter: 1
             - tool: Anchoring
               doAfter: 2
-
-    - node: windowReinforcedDirectional
-      entity: WindowReinforcedDirectional
-      edges:
-        - to: start
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetRGlass1
-              amount: 1
-            - !type:DeleteEntity {}
+        - to: plasmaWindowDirectional
           steps:
-            - tool: Screwing
+            - material: Plasma
+              amount: 1
+              doAfter: 0.5
+        - to: uraniumWindowDirectional
+          steps:
+            - material: Uranium
+              amount: 1
+              doAfter: 0.5
+        - to: windowClockworkDirectional
+          steps:
+            - material: Brass
+              amount: 1
               doAfter: 1
-            - tool: Prying
-              doAfter: 2
-            - tool: Screwing
+        - to: windowReinforcedDirectional
+          steps:
+            - material: MetalRod
+              amount: 1
               doAfter: 1
-            - tool: Anchoring
-              doAfter: 2
 
     - node: plasmaWindowDirectional
       entity: PlasmaWindowDirectional
@@ -98,6 +99,35 @@
               doAfter: 2
             - tool: Anchoring
               doAfter: 3
+        - to: plasmaReinforcedWindowDirectional
+          steps:
+            - material: MetalRod
+              amount: 1
+              doAfter: 0.5
+
+    - node: uraniumWindowDirectional
+      entity: UraniumWindowDirectional
+      edges:
+        - to: start
+          completed:
+            - !type:SpawnPrototype
+              prototype: SheetUGlass1
+              amount: 1
+            - !type:DeleteEntity {}
+          steps:
+            - tool: Screwing
+              doAfter: 2
+            - tool: Prying
+              doAfter: 3
+            - tool: Screwing
+              doAfter: 2
+            - tool: Anchoring
+              doAfter: 3
+        - to: uraniumReinforcedWindowDirectional
+          steps:
+            - material: MetalRod
+              amount: 1
+              doAfter: 0.5
 
     - node: windowClockworkDirectional
       entity: WindowClockworkDirectional
@@ -118,6 +148,35 @@
             - tool: Anchoring
               doAfter: 3
 
+    - node: windowReinforcedDirectional
+      entity: WindowReinforcedDirectional
+      edges:
+        - to: start
+          completed:
+            - !type:SpawnPrototype
+              prototype: SheetRGlass1
+              amount: 1
+            - !type:DeleteEntity {}
+          steps:
+            - tool: Screwing
+              doAfter: 1
+            - tool: Prying
+              doAfter: 2
+            - tool: Screwing
+              doAfter: 1
+            - tool: Anchoring
+              doAfter: 2
+        - to: plasmaReinforcedWindowDirectional
+          steps:
+            - material: Plasma
+              amount: 1
+              doAfter: 0.5
+        - to: uraniumReinforcedWindowDirectional
+          steps:
+            - material: Uranium
+              amount: 2
+              doAfter: 0.5
+
     - node: plasmaReinforcedWindowDirectional
       entity: PlasmaReinforcedWindowDirectional
       edges:
@@ -125,24 +184,6 @@
           completed:
             - !type:SpawnPrototype
               prototype: SheetRPGlass1
-              amount: 1
-            - !type:DeleteEntity {}
-          steps:
-            - tool: Screwing
-              doAfter: 2
-            - tool: Prying
-              doAfter: 3
-            - tool: Screwing
-              doAfter: 2
-            - tool: Anchoring
-              doAfter: 3
-    - node: uraniumWindowDirectional
-      entity: UraniumWindowDirectional
-      edges:
-        - to: start
-          completed:
-            - !type:SpawnPrototype
-              prototype: SheetUGlass1
               amount: 1
             - !type:DeleteEntity {}
           steps:
