--- a/Resources/Prototypes/Recipes/Crafting/improvised.yml
+++ b/Resources/Prototypes/Recipes/Crafting/improvised.yml
@@ -214,3 +214,16 @@
   icon:
     sprite: Objects/Weapons/Bombs/pipebomb.rsi
     state: icon
+
+- type: construction
+  name: Diamond hoe
+  id: DiamondHoe
+  graph: DiamondHoe
+  startNode: start
+  targetNode: DiamondHoe
+  category: construction-category-weapons
+  objectType: Item
+  description: You always must made Diamond hoe from your first or last diamonds. These are the rules.
+  icon:
+    sprite: Objects/Tools/Hydroponics/Diamondhoe.rsi
+    state: icon
