Add some AI names
Co-Authored-By: ScarKy0 <106310278+ScarKy0@users.noreply.github.com>
Co-Authored-By: TakoDragon <69509841+BackeTako@users.noreply.github.com>

--- a/Resources/Prototypes/Datasets/Names/ai.yml
+++ b/Resources/Prototypes/Datasets/Names/ai.yml
@@ -19,9 +19,13 @@
   - Aniel
   - AOL
   - Asimov
+  - Auto
+  - Big Brother
+  - Big Sister
   - Bishop
   - Blitz
   - Box
+  - Butler
   - Cassandra
   - Cell
   - Chii
@@ -33,6 +37,7 @@
   - Dial Up
   - Dorfl
   - Duey
+  - ELIZA
   - Emma-2
   - Erasmus
   - Everything
@@ -44,6 +49,7 @@
   - George
   - H.E.L.P
   - Hadaly
+  - Hal
   - Helios
   - Hivebot Overmind
   - Huey
@@ -53,6 +59,7 @@
   - Klapaucius
   - Knight
   - Louie
+  - M.A.L.F
   - MARK13
   - Maria
   - Marvin
@@ -68,12 +75,14 @@
   - Project Y2K
   - Revelation
   - Robot Devil
+  - S.A.G.E.
   - S.A.M.
   - S.H.O.C.K.
   - S.H.R.O.U.D.
   - S.O.P.H.I.E.
   - Samaritan
   - Shrike
+  - SkyDOS
   - Solo
   - Station Control Program
   - Super 35
