--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -86,6 +86,18 @@
         # anyway it's just a quality of life thing.
         showEnts: True
 
+# J.U.D.G.E. Interface + Law Chips
+- type: entity
+  id: JudgeInterface
+  parent: BaseItem
+  name: J.U.D.G.E. Interface
+  description: The latest in cyberlegal technology. It is able to compile human-readable text into cyberlaw and imprint to law chips.
+  components:
+   - type: Sprite
+     sprite: Objects/Devices/judgeinterface.rsi
+     state: on
+
+
 # Boards
 - type: entity
   id: AsimovCircuitBoard
