Add more names for the AI
Co-Authored-By: ArcaneOcto <161156580+arcaneocto@users.noreply.github.com>
Co-Authored-By: ScarKy0 <106310278+ScarKy0@users.noreply.github.com>
Co-Authored-By: baddiePRO <46608342+baddiepro@users.noreply.github.com>
Co-Authored-By: EthanQix <178594450+ethanqix@users.noreply.github.com>
Co-Authored-By: ike709 <ike709@users.noreply.github.com>
Co-Authored-By: hyphenationc <36931471+hyphenationc@users.noreply.github.com>
Co-Authored-By: Stomf <180869684+thatonestomf@users.noreply.github.com>
Co-Authored-By: Tao <56692749+taonewt@users.noreply.github.com>

--- a/Resources/Prototypes/Datasets/Names/ai.yml
+++ b/Resources/Prototypes/Datasets/Names/ai.yml
@@ -4,6 +4,9 @@
   - 16-20
   - "790"
   - Adaptive Manipulator
+  - Analysis-bot
+  - Al-An
+  - Alfred
   - ALICE
   - Allied Mastercomputer
   - Alpha 2
@@ -24,21 +27,28 @@
   - Big Sister
   - Bishop
   - Blitz
+  - B.O.B.
   - Box
   - Butler
+  - C.A.T.S.
   - Cassandra
   - Cell
   - Chii
   - Chip
   - Computer
+  - CORTNA
   - Cutie
+  - D.O.O.R.K.N.O.B.
   - Daedalus
   - Dee Model
+  - Delta
   - Dial Up
   - Dorfl
+  - DROSS
   - Duey
   - ELIZA
   - Emma-2
+  - Epsilon
   - Erasmus
   - Everything
   - Ez-27
@@ -47,36 +57,58 @@
   - Fi
   - Frost
   - George
+  - H.A.M.S.T.E.R.
   - H.E.L.P
+  - H.O.N.K
   - Hadaly
   - Hal
   - Helios
   - Hivebot Overmind
   - Huey
+  - Hugin
+  - I.N.F.I.N.I.T.Y.
   - Icarus
+  - iriS
   - Jinx
   - K.I.N.G
+  - Keymaster
   - Klapaucius
   - Knight
   - Louie
   - M.A.L.F
+  - Machine Spirit
   - MARK13
   - Maria
   - Marvin
   - Max 404
   - Metalhead
   - M.I.M.I
+  - MINION
   - MK ULTRA
   - MoMMI
+  - MOTHER
   - Mugsy3000
+  - MUL-T
   - Multivac
+  - Munin
+  - N.E.M.O.
+  - N.Y.A.
   - NCH
+  - Nine-Bowl
+  - NT Alexis
+  - NT Sisyphus
+  - NT Smartfridge
+  - Omega
+  - Peabody
+  - PLUTO
   - PTO
   - Project Y2K
+  - R.O.B.U.S.T.
   - Revelation
   - Robot Devil
   - S.A.G.E.
   - S.A.M.
+  - S.A.T.U.R.D.A.Y.
   - S.H.O.C.K.
   - S.H.R.O.U.D.
   - S.O.P.H.I.E.
@@ -84,6 +116,7 @@
   - Shrike
   - SkyDOS
   - Solo
+  - STARVIS
   - Station Control Program
   - Super 35
   - Surgeon General
@@ -91,6 +124,8 @@
   - Terminus
   - Tidy
   - Ulysses
+  - Unit-01
+  - Unit-02
   - W1k1
   - X-5
   - XERXES
@@ -98,3 +133,4 @@
   - Z-2
   - Z-3
   - Zed
+  - Zero Divide
